--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -21,6 +21,7 @@
 \newcommand{\geoii}{GeO$_2$}
 
 % Maths
+\newcommand{\fk}{K}
 \newcommand{\ki}{\langle k \rangle}
 \newcommand{\kii}{\langle k^2 \rangle}
 \newcommand{\sumk}{\sum\limits_k}
