--- a/text/methods.tex
+++ b/text/methods.tex
@@ -371,24 +371,25 @@ The nature of the bond switching method lends itself to the use of semi\--empiri
 As such a popular choice for materials modelling is the Keating potential and modifications thereof \cite{Keating1966,Barkema2000}. 
 For a \td{} system the Keating potential has the form:
 \begin{equation}
-	\pen = \frac{3}{16}\frac{k_S}{r_0^2}\sum_{\substack{i,j \in \\ \text{stretches}}} \left(r_{ij}^2-r_0^2\right)^2+
-	\frac{3}{8}\frac{k_A}{r_0^2}\sum_{\substack{ijk \in \\ \text{angles}}}\left(r_{ij}r_{ik}\cos\theta_{i,j,k}+d_0^2\cos\theta_0\right)^2 \,,
+	\label{eq:keating}
+	\pen = \frac{3}{16}\frac{\fk_S}{r_0^2}\sum_{\substack{i,j \in \\ \text{stretches}}} \left(r_{ij}^2-r_0^2\right)^2+
+	\frac{3}{8}\frac{\fk_A}{r_0^2}\sum_{\substack{ijk \in \\ \text{angles}}}\left(r_{ij}r_{ik}\cos\theta_{i,j,k}+d_0^2\cos\theta_0\right)^2 \,,
 \end{equation}
-where $r_{ij}$ the distance and $\theta_{ijk}$ the angle between particles; whilst $k_S$ and $k_A$ are the force constants for the stretching and angular terms respectively \cite{Kumar2012}.
+where $r_{ij}$ the distance and $\theta_{ijk}$ the angle between particles; whilst $\fk_S$ and $\fk_A$ are the force constants for the stretching and angular terms respectively \cite{Kumar2012}.
 This potential drives the system towards equilibrium values of $r_0$ for the bond lengths and $\theta_0$ for the bond angles.
 The Keating potential has been parametrised for a range of specific materials \cite{Kumar2012,Drabold2009}. 
 
 However, a more generic potential model is sometimes required which captures the same essential physics.
 This is provided through the simplified Keating potential \cite{VonAlfthan2003},
 \begin{equation}
-	\pen = \frac{k_S}{2}\sum_{\substack{i,j\in \\ \text{stretches}}}\left(r_{ij}-r_0\right)^2 + \frac{k_A}{2}\sum_{\substack{i,j,k \in \\ \text{angles}}} \left(\cos\theta_{ijk}-\cos\theta_0\right)^2\,,
+	\pen = \frac{\fk_S}{2}\sum_{\substack{i,j\in \\ \text{stretches}}}\left(r_{ij}-r_0\right)^2 + \frac{\fk_A}{2}\sum_{\substack{i,j,k \in \\ \text{angles}}} \left(\cos\theta_{ijk}-\cos\theta_0\right)^2\,,
 \end{equation}
 which is harmonic in stretching and angular terms.
 One final modification can be made to this potential. 
 Sometimes it is informative build models which enforce ring convexity \ie{} maintain all angles within the range $0\leq \theta_{ijk} \leq \pi$.
 This can be achieved by augmenting the simplified Keating potential with a restricted bending (ReB) potential \cite{Bulacu2013}:
 \begin{equation}
-	\pen = \frac{k_S}{2}\sum_{\substack{i,j\in \\ \text{stretches}}}\left(r_{ij}-r_0\right)^2 + \frac{k_A}{2}\sum_{\substack{i,j,k \in \\ \text{angles}}} \frac{\left(\cos\theta_{ijk}-\cos\theta_0\right)^2}{\sin^{2}\theta_{ijk}}\,.
+	\pen = \frac{\fk_S}{2}\sum_{\substack{i,j\in \\ \text{stretches}}}\left(r_{ij}-r_0\right)^2 + \frac{\fk_A}{2}\sum_{\substack{i,j,k \in \\ \text{angles}}} \frac{\left(\cos\theta_{ijk}-\cos\theta_0\right)^2}{\sin^{2}\theta_{ijk}}\,.
 \end{equation}
 The addition of the sine term in denominator causes the potential to diverge as bond angles approach linearity, preventing bonds from ``inverting''.
 
