--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -285,7 +285,7 @@ Note that one might na\"ively assume that driving $\alpha$ to more positive valu
 Similar analysis was performed on 100 generated \zach{} and \sioii{} networks.
 Although our algorithm requires the fit to equation \eqref{eq:aboavweaire} to be exactly linear for the aG system, for broader ring distributions this is no longer the case. 
 However, for the \zach{} configuration the linear regression ($R^2$) coefficient was always in excess of $0.995$, and for the silica the average $R^{2}$ was $0.979$, representing a very good fit. 
-Figure \ref{fig:topt1} shows the energies of both the \zach{} and \sioii{} systems as a function of $\alpha$. 
+Figure \ref{fig:toptenergy1} shows the energies of both the \zach{} and \sioii{} systems as a function of $\alpha$. 
 Both cases resemble those for the aG with energy minima at $\alpha\sim{0.25}$. The silica curve shows smaller curvature reflecting the broader distribution
 of ring sizes whilst the \zach{} curve shows a greater curvature reflecting the ``extreme'' \ie{} physically unrealistic) nature of the distribution.
 In addition it proved difficult to generate low $\alpha$ configurations ($\alpha<-0.1$) for the Zachariasen network.
