--- a/text/theory.tex
+++ b/text/theory.tex
@@ -202,6 +202,7 @@ Therefore in reality these relationships hold, and remain as applicable to amorp
 
 This analysis also extends to spherical topology where $\chi=2$, and so:
  \begin{equation}
+ 	\label{eq:2dsphericalcases}
 	\ki = \begin{cases}
 		\frac{6N-12}{N}, \quad x_3 = 1 \\
 		\frac{4N-8}{N}, \quad x_4 = 1.
