--- a/thesis.tex
+++ b/thesis.tex
@@ -209,6 +209,7 @@
 \include{text/methods}
 \include{text/bilayers}
 \include{text/targeted_opt}
+\include{text/general_networks}
 
 
 %% APPENDICES %% 
